<resources>
    <string name="app_name">ProtectMe</string>
    <string name="title_activity_main">ProtectMe</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="character_name">Name: %s</string>
    <string name="character_age">Age: %d</string>
    <string name="history_type">Type: %s</string>
    <string name="history_date">Occurred: %s</string>
    <string name="history_contacts">Contacts: %s</string>
    <string name="history_message">Message: %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="emergency_history_header">Emergency History</string>
    <string name="icon_to_represent_emergency_type">Icon to represent emergency type</string>
</resources>