<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_margin="16dp"
        android:elevation="12dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="8dp"
        android:background="@drawable/card_border">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/history_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/icon_to_represent_emergency_type" />

        <TextView
            android:id="@+id/history_type"
            android:text="@string/history_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/history_icon"
            android:textSize="16sp"
            android:textColor="#333333"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/history_date"
            android:text="@string/history_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/history_type"
            app:layout_constraintStart_toEndOf="@id/history_icon"
            android:textSize="16sp"
            android:textColor="#333333"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/history_contacts"
            android:text="@string/history_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/history_date"
            app:layout_constraintStart_toEndOf="@id/history_icon"
            android:textSize="16sp"
            android:textColor="#333333"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/history_message"
            android:text="@string/history_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/history_contacts"
            app:layout_constraintStart_toEndOf="@id/history_icon"
            android:textSize="16sp"
            android:textColor="#333333"
            android:layout_marginStart="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>


